-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.12
-
Component/s: None
-
Labels:
-
Module:
-
Guilty Commit:0.4.12-dev-373-g7e39678
0.4.12-RC-46-g317ca41 gcc dbg lin is affected.
Somewhen around 0.4.12dev'ing we implemented analogon to 'MS Aerosnap', that allows you to snap a Window to the screen borders via Winkey+Cursor key.
That logic should never affect the taskbar, but it does erroneously, leading to all kinds of misbehavior.
0.4.12-RC-46-g317ca41__affected.webm
0.4.12-RC-46-g317ca41__affected.log
Reproduction steps
-uncheck the checkmark that 'fixes the taskbar' to be able to freely move it
-drag it to the right screen border, you will most likely see the first malfunction here, as it often 'wants' to expand to 50% screen size
-when now moving it by pressing Winkey+arrow-up, Winkey+arrow-left, winkey+arrow-right, winkey+arrow-down you will soon enter a state where it's getting totally impossible to interact with the taskbar anymore. Only way out is killing the explorer
My recommendation
Make sure, Aerosnap is ineffective for the taskbar 'Window'
- blocks
-
CORE-12845 Add Windows 7 hot keys Win+Arrows and drag to sides
-
- Resolved
-